--- a/template.html
+++ b/template.html
@@ -9,6 +9,7 @@
         <!-- FontAwesome v6.5.1 -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
         <link rel="stylesheet" href="https://use.typekit.net/gge5emt.css">
+        <link rel="stylesheet" href="src/front/styles/styles.css">
         
         
     </head>
